syntax = "proto3";

package booking;

option go_package = "booking/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "itinerary.proto";

service BookingService {
  rpc BookNewCargo(BookNewCargoRequest) returns (BookNewCargoResponse) {
    option (google.api.http) = {
      post : "/booking/v1/cargos"
      body : "*"
    };
  }
  rpc RequestPossibleRoutesForCargo(RequestPossibleRoutesForCargoRequest)
      returns (stream itinerary.Itinerary) {
    option (google.api.http) = {
      get : "/booking/v1/cargos/{tracking_id}/routes"
    };
  }
  rpc AssignCargoToRoute(AssignCargoToRouteRequest)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/booking/v1/cargos/{tracking_id}/route"
      body : "itinerary"
    };
  }
  rpc ChangeDestination(ChangeDestinationRequest)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/booking/v1/cargos/{tracking_id}"
      body : "*"
    };
  }
  rpc Locations(google.protobuf.Empty) returns (LocationsResponse) {
    option (google.api.http) = {
      get : "/booking/v1/locations"
    };
  }
  rpc LoadCargo(LoadCargoRequest) returns (LoadCargoResponse) {
    option (google.api.http) = {
      get : "/booking/v1/cargos/{tracking_id}"
    };
  }
  rpc Cargos(google.protobuf.Empty) returns (CargosResponse) {
    option (google.api.http) = {
      get : "/booking/v1/cargos"
    };
  }
}

message BookNewCargoRequest {
  string origin = 1;
  string destination = 2;
  google.protobuf.Timestamp deadline = 3;
}

message BookNewCargoResponse { string tracking_id = 1; }

message RequestPossibleRoutesForCargoRequest { string tracking_id = 1; }

message AssignCargoToRouteRequest {
  string tracking_id = 1;
  itinerary.Itinerary itinerary = 2;
}

message ChangeDestinationRequest {
  string tracking_id = 1;
  string destination = 2;
}

message LocationsResponse {
  message Location {
    string un_locode = 1;
    string name = 2;
  }
  repeated Location locations = 1;
}

message LoadCargoRequest { string tracking_id = 1; }

message Cargo {
  google.protobuf.Timestamp arrival_deadline = 1;
  string destination = 2;
  repeated itinerary.Leg legs = 3;
  bool misrouted = 4;
  string origin = 5;
  bool routed = 6;
  string tracking_id = 7;
}

message LoadCargoResponse { Cargo cargo = 1; }

message CargosResponse { repeated Cargo cargos = 1; }